cmake_minimum_required(VERSION 3.13)
project(week6)

set(CMAKE_CXX_STANDARD 14)

set(PROJECT_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src)
set(PROJECT_SOURCES_DIR ${PROJECT_SOURCE_DIR}/src)

file(GLOB_RECURSE HEADERS ${PROJECT_HEADERS_DIR}/*.h)
file(GLOB_RECURSE SOURCES ${PROJECT_SOURCES_DIR}/*.cpp)

include_directories(PROJECT_HEADERS_DIR)

add_executable(week6 ${SOURCES} ${HEADERS})
